--- a/PasswordDefender/MainWindow.xaml
+++ b/PasswordDefender/MainWindow.xaml
@@ -5,8 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PasswordDefender"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="PasswordDefender - менеджер паролей" Height="450" Width="800" ResizeMode="NoResize">
     <Grid>
-        
+        <TabControl HorizontalAlignment="Left" Height="401" Margin="0,10,0,0" VerticalAlignment="Top" Width="784">
+            <TabItem Header="Данные" Background="#FF9DB3D8" FontFamily="Calibri" FontSize="16">
+                <Grid Background="#FFE5E5E5">
+                    <DataGrid HorizontalAlignment="Left" Height="349" Margin="10,10,0,0" VerticalAlignment="Top" Width="758"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Добавить" Background="#FF9DB3D8" FontFamily="Calibri" FontSize="16"/>
+            <TabItem Header="Настройки" Background="#FF9DB3D8" FontFamily="Calibri" FontSize="16">
+                <Grid Background="#FFE5E5E5">
+                    <Label Content="Мастер-пароль" Margin="302,51,300,283" FontSize="22" FontFamily="Calibri" Background="Transparent" HorizontalContentAlignment="Center">
+                        <Label.ToolTip>
+                            <ToolTip Content="Используется для шифрования и дешифрования данных"/>
+                        </Label.ToolTip>
+                    </Label>
+                    <PasswordBox HorizontalAlignment="Left" Margin="302,91,0,0" VerticalAlignment="Top" Width="176" Height="30" FontSize="20"/>
+                    <Button Content="Установить" HorizontalAlignment="Left" Margin="221,126,0,0" VerticalAlignment="Top" Width="160"/>
+                    <Button Content="Проверить" HorizontalAlignment="Left" Margin="396,126,0,0" VerticalAlignment="Top" Width="160"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+
+
     </Grid>
 </Window>
